update event info

--- a/index.html
+++ b/index.html
@@ -139,7 +139,9 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
       </tr>
 
       </table>
-
+<br>
+<br>
+** You must book your cruise with Emily Speers (Xstream Travel) on this website to be eligible to enter in all of the Radio Station Events** <br>  If Carnival is running a past guest promotion or any other promotion, I can get that promo price or promo amenity for you too!
   </div>
   <br>
 
