update pricing and dropdown option

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
   <td>4D</td>
   <td>INTERIOR</td>
   <td>DECK 6</td>
-  <td>$586.25 PER PERSON</td>
+  <td>$745.25 PER PERSON</td>
 
 </tr>
 
@@ -207,7 +207,7 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
   <td>4B</td>
   <td>INTERIOR</td>
   <td>DECK 1 / DECK 2</td>
-  <td>$566.25 PER PERSON</td>
+  <td>$725.25 PER PERSON</td>
 
 </tr>
 
@@ -611,10 +611,10 @@ Any registrations submitted after 04-01-2018 will require a $250.00 PER PERSON d
 <div class="">
 
   <select class="w3-input w3-border w3-large" type="text" name="Room Type" required>
-    <option value="Balcony 8C" >Balcony 8C - Sold Out - Prices on Request</option>
-    <option value="Balcony 8B">Balcony 8B - Sold Out - Prices on Request</option>
-    <option value="Ocean View 6B">Ocean View 6B - Sold Out - Prices on Request</option>
-    <option value="Interior 4F">Interior 4F - Sold Out - Prices on Request</option>
+    <option value="Balcony 8C - Sold Out" >Balcony 8C - Sold Out - Prices on Request</option>
+    <option value="Balcony 8B - Sold Out">Balcony 8B - Sold Out - Prices on Request</option>
+    <option value="Ocean View 6B - Sold Out">Ocean View 6B - Sold Out - Prices on Request</option>
+    <option value="Interior 4F - Sold Out">Interior 4F - Sold Out - Prices on Request</option>
     <option value="Interior 4D">Interior 4D</option>
     <option value="Interior 4B">Interior 4B</option>
 
