update hotel information

--- a/index.html
+++ b/index.html
@@ -418,8 +418,25 @@ Any registrations submitted after 04-01-2018 will require a $250.00 PER PERSON d
 <br>
 
 <h1 class="w3-center">PRE-CRUISE HOTEL INFORMATION</h1>
-<p class="w3-center">Pre-cruise party and/or hotel information is coming soon!</p>
+<h2 class="w3-center">Recommended Hotels</h2>
+<br>
+  <h6 class="w3-center">
+    Courtyard Marriot Long Beach Downtown
+<br>
+    500 East 1st Street, Long Beach, CA
+<br>
+<br>
+    Hyatt Centric The Pike Long Beach
+<br>
+    285 Bay Street, Long Beach, CA
+<br>
+<br>
+    The Westin Long Beach
+<br>
+    333 East Ocean Boulevard, Long Beach, CA
+</h6>
 
+<br>
 <br>
 
 <h1 class="w3-center">CANCELLATIONS</h1>
