update hotel info

--- a/index.html
+++ b/index.html
@@ -434,6 +434,16 @@ Any registrations submitted after 04-01-2018 will require a $250.00 PER PERSON d
     The Westin Long Beach
 <br>
     333 East Ocean Boulevard, Long Beach, CA
+<br>
+<br>
+    Vagabond Inn
+<br>
+    150 Alamitos Ave., Long Beach, CA
+<br>
+<br>
+    Travelodge Wyndham Long Beach Convention Center
+<br>
+    80 Atlanctic Ave., Long Beach, CA
 </h6>
 
 <br>
