update all sold out

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
 
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64 w3-center " id="about">
+<div class="w3-content w3-container w3-padding-64 w3-center">
+  <h1 style = "color: red">All rooms are currently sold out. If you would like to be placed on a waitlist in the event that there are cancellations, please submit a registration form with complete information below and select “Wait List Request” in the drop-down menu. Your credit card will not be charged until a corporate team member from Xstream Travel contacts you for more information</h1>
+</div>
+
   <h1 class="w3-center">Trip Information</h1>
 
   <h5>Magic 107.3 would like to personally invite you to cruise with us in 2018. This year’s cruise features 4 NEW ports – Long Beach, California, Cabo San Lucas, Mazatlán and Puerto Vallarta, Mexico! Cabo San Lucas and Puerto Vallarta feature extended hours in port, allowing you to relax and enjoy longer experiences in these all new ports!
@@ -197,18 +201,18 @@ It’s hard to tell which onboard space best represents Carnival Splendor — th
 </tr>
 
 <tr>
-  <td>4D</td>
-  <td>INTERIOR</td>
-  <td>DECK 6</td>
-  <td>$745.25 PER PERSON</td>
+  <td style="color: red">4D</td>
+  <td style="color: red">INTERIOR</td>
+  <td style="color: red">DECK 6</td>
+  <td style="color: red">SOLD OUT - Prices on Request</td>
 
 </tr>
 
 <tr>
-  <td>4B</td>
-  <td>INTERIOR</td>
-  <td>DECK 1 / DECK 2</td>
-  <td>$725.25 PER PERSON</td>
+  <td style="color: red">4B</td>
+  <td style="color: red">INTERIOR</td>
+  <td style="color: red">DECK 1 / DECK 2</td>
+  <td style="color: red">SOLD OUT - Prices on Request</td>
 
 </tr>
 
@@ -639,12 +643,13 @@ Any registrations submitted after 04-01-2018 will require a $250.00 PER PERSON d
 <div class="">
 
   <select class="w3-input w3-border w3-large" type="text" name="Room Type" required>
-    <option value="Balcony 8C - Sold Out" >Balcony 8C - Sold Out - Prices on Request</option>
+    <!-- <option value="Balcony 8C - Sold Out" >Balcony 8C - Sold Out - Prices on Request</option>
     <option value="Balcony 8B - Sold Out">Balcony 8B - Sold Out - Prices on Request</option>
     <option value="Ocean View 6B - Sold Out">Ocean View 6B - Sold Out - Prices on Request</option>
     <option value="Interior 4F - Sold Out">Interior 4F - Sold Out - Prices on Request</option>
-    <option value="Interior 4D">Interior 4D</option>
-    <option value="Interior 4B">Interior 4B</option>
+    <option value="Interior 4D - Sold Out">Interior 4D - Sold Out - Prices on Request</option>
+    <option value="Interior 4B -  Sold Out">Interior 4B - Sold Out - Prices on Request</option> -->
+    <option value="Wait List Request">Wait List Request</option>
 
   </select>
 
